feat: adiciona documentação na rota pública pets (#195)
* feat: adiciona documentação na rota púclica pets

* Cria commit para verificar CI
